5rd coomite for Home page done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header>
         <!-- nav -->
-        <nav>
+        <nav class="">
             <div class="navbar bg-[#12372A] text-white urbanist sticky">
                 <div class="navbar-start">
                     <div class="dropdown">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="navbar-end ">
                     <a
-                        class="btn px-20 text-xl font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">Buy
+                        class="btn px-20 text-xl hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy
                         Theme <img class="w-8" src="./icon/shopping-bag.png" alt=""></a>
                 </div>
             </div>
@@ -73,16 +73,167 @@
                             Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
                         </p>
                         <div class="">
-                            <button class="btn mr-8 px-20 text-xl font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">Get Started</button>
-                            <button class="btn px-20 bg-[#12372A] text-white text-xl font-semibold border-2 border-[#D2FF72] rounded-3xl hover:bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] hover:border-[#D2FF72] hover:text-black">Get Started</button>
+                            <button
+                                class="btn mr-8 px-20 text-xl font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">Get
+                                Started</button>
+                            <button
+                                class="btn px-20 bg-[#12372A] text-white text-xl font-semibold border-2 border-[#D2FF72] rounded-3xl hover:bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] hover:border-[#D2FF72] hover:text-black">Get
+                                Started</button>
                         </div>
                     </div>
                 </div>
                 <img src="./icon/b.png" alt="">
             </div>
-          
+            <!-- <marquee behavior="" direction=""></marquee> -->
         </section>
         <!--  -->
+        <!-- Exclusive features -->
+        <div class=" mt-12">
+            <p class="text-xl font-[400] flex justify-center ">What makes ubone stand out?</p>
+            <h1 class="text-6xl font-[800] flex justify-center urbanist mt-2">Exclusive features</h1>
+        </div>
+        <section class="container mx-auto my-24">
+            <div
+                class="sm:grid sm:grid-cols-1 sm:gap-4 md:grid md:grid-cols-3 md:justify-center md:items-center md:gap-12 lg:grid grid-cols-3 lg:justify-center lg:items-center lg:gap-12">
+                <!-- 1st -->
+                <div class="grid sm:gap-4 md:gap-4 lg:gap-4">
+                    <div class="border-2 border-[#D2FF72] rounded-2xl shadow-2xl">
+                        <div class="card bg-base-100  shadow-xl">
+                            <figure class="px-10 pt-10">
+                                <img src="./img/scoote.png" alt="Shoes" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <p class="w-48 border-2 border-[#D2FF72] "></p>
+                                <h2 class="card-title">Fast loading speed</h2>
+                                <p>Page speed is a critical factor in ranking your website higher</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 1s -->
+                    <div class="border-2 border-[#D2FF72] rounded-2xl shadow-2xl">
+                        <div class="card bg-base-100  shadow-xl">
+                            <figure class="px-10 pt-10">
+                                <img src="./img/rodeo-project-management-software-C9BWMsjJGrE-unsplash.png" alt="Shoes"
+                                    class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <p class="w-48 border-2 border-[#D2FF72] "></p>
+                                <h2 class="card-title">No coding required</h2>
+                                <p>Setup a fully functional, awesome website without needing to code</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd -->
+                <div class="border-4 border-[#D2FF72] rounded-2xl shadow-3xl">
+                    <div class="hero min-h-[54rem] shadow-2xl"
+                        style="background-image: url(./img/goos\ vibes\ only.jpg); border-radius: 16px;">
+                        <div class="hero-overlay bg-opacity-0"></div>
+                        <div class="hero-content text-neutral-content text-center">
+                            <div class="max-w-md">
+                                <div
+                                    class=" rounded-l-[12rem] rounded-t-[24rem] rounded-b-[17rem] rounded-r-[15rem]  p-24  border-r-8 border-lt-4 border-t-4 border-b-2 border-[#D2FF72]  bg-[#73EC8B]">
+                                    <h1 class="text-6xl text-black font-bold">130+</h1>
+                                    <p class="text-xl text-black font-normal">Creative and modern animation effects
+                                        sections</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd -->
+                <div class="grid sm:gap-4 md:gap-4 lg:gap-4">
+                    <div class="border-2 border-[#D2FF72] rounded-2xl shadow-2xl">
+                        <div class="card bg-base-100  shadow-xl">
+                            <figure class="px-10 pt-10">
+                                <img src="./img/frederick-wallace-ijskXrOYctc-unsplash.png" alt="Shoes"
+                                    class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <p class="w-48 border-2 border-[#D2FF72] "></p>
+                                <h2 class="card-title">Fast loading speed</h2>
+                                <p>Page speed is a critical factor in ranking your website higher</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 1s -->
+                    <div class="border-2 border-[#D2FF72] rounded-2xl shadow-2xl">
+                        <div class="card bg-base-100  shadow-xl">
+                            <figure class="px-10 pt-10">
+                                <img src="./img/madeline-.png" alt="Shoes" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <p class="w-48 border-2 border-[#D2FF72] "></p>
+                                <h2 class="card-title">No coding required</h2>
+                                <p>Setup a fully functional, awesome website without needing to code</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Homepage for different industries -->
+        <div class="mb-12">
+            <p class="text-xl font-[400] flex justify-center mt-12">Homepage for different industries</p>
+            <h1 class="text-6xl font-[800] flex justify-center urbanist mt-2">Premium demos</h1>
+        </div>
+
+        <section class="container mx-auto my-24">
+       <section class="flex justify-center items-center gap-8">
+             <!-- 1s -->
+             <div class="card card-compact shadow-xl ">
+                <figure>
+                    <img src="./img/saif71-com-TfBoPuNwW2w-unsplash.png" alt="headphone" />
+                </figure>
+                <div class="card-body">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <h2 class=" text-xl font-bold">Earubuds single product</h2>
+                            <p class=" text-l font-bold">Sound, Electronics, Gadget</p>
+                        </div>
+                        <div class="">
+                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 2nd -->
+            <div class="card card-compact shadow-xl">
+                <figure>
+                    <img src="./img/diana.png" alt="headphone" />
+                </figure>
+                <div class="card-body">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <h2 class=" text-xl font-bold">Jewellery store</h2>
+                            <p class=" text-l font-normal">Necklaces, Trendy, Trends</p>
+                        </div>
+                        <div class="">
+                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 3rd -->
+            <div class="card card-compact shadow-xl">
+                <figure>
+                    <img src="./img/painting.png" alt="headphone" />
+                </figure>
+                <div class="card-body">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <h2 class=" text-xl font-bold">Art store</h2>
+                            <p class=" text-l font-normal">Painting, Art, Personal, Photography</p>
+                        </div>
+                        <div class="">
+                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </section>
+        </section>
+       
     </header>
 
 </body>
