5rd coomite for extra done

--- a/index.html
+++ b/index.html
@@ -179,62 +179,146 @@
         </div>
 
         <section class="container mx-auto my-24">
-       <section class="flex justify-center items-center gap-8">
-             <!-- 1s -->
-             <div class="card card-compact shadow-xl ">
-                <figure>
-                    <img src="./img/saif71-com-TfBoPuNwW2w-unsplash.png" alt="headphone" />
-                </figure>
-                <div class="card-body">
-                    <div class="flex items-center justify-between">
-                        <div>
-                            <h2 class=" text-xl font-bold">Earubuds single product</h2>
-                            <p class=" text-l font-bold">Sound, Electronics, Gadget</p>
-                        </div>
-                        <div class="">
-                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- 2nd -->
-            <div class="card card-compact shadow-xl">
-                <figure>
-                    <img src="./img/diana.png" alt="headphone" />
-                </figure>
-                <div class="card-body">
-                    <div class="flex items-center justify-between">
-                        <div>
-                            <h2 class=" text-xl font-bold">Jewellery store</h2>
-                            <p class=" text-l font-normal">Necklaces, Trendy, Trends</p>
-                        </div>
-                        <div class="">
-                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
+            <section class="flex justify-center items-center gap-8">
+                <!-- 1s -->
+                <div class="card card-compact shadow-xl ">
+                    <figure>
+                        <img src="./img/saif71-com-TfBoPuNwW2w-unsplash.png" alt="headphone" />
+                    </figure>
+                    <div class="card-body">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h2 class=" text-xl font-bold">Earubuds single product</h2>
+                                <p class=" text-l font-bold">Sound, Electronics, Gadget</p>
+                            </div>
+                            <div class="">
+                                <button
+                                    class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy
+                                    Now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- 3rd -->
-            <div class="card card-compact shadow-xl">
-                <figure>
-                    <img src="./img/painting.png" alt="headphone" />
-                </figure>
-                <div class="card-body">
-                    <div class="flex items-center justify-between">
-                        <div>
-                            <h2 class=" text-xl font-bold">Art store</h2>
-                            <p class=" text-l font-normal">Painting, Art, Personal, Photography</p>
-                        </div>
-                        <div class="">
-                            <button class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy Now</button>
+                <!-- 2nd -->
+                <div class="card card-compact shadow-xl">
+                    <figure>
+                        <img src="./img/diana.png" alt="headphone" />
+                    </figure>
+                    <div class="card-body">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h2 class=" text-xl font-bold">Jewellery store</h2>
+                                <p class=" text-l font-normal">Necklaces, Trendy, Trends</p>
+                            </div>
+                            <div class="">
+                                <button
+                                    class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy
+                                    Now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-       </section>
+                <!-- 3rd -->
+                <div class="card card-compact shadow-xl">
+                    <figure>
+                        <img src="./img/painting.png" alt="headphone" />
+                    </figure>
+                    <div class="card-body">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h2 class=" text-xl font-bold">Art store</h2>
+                                <p class=" text-l font-normal">Painting, Art, Personal, Photography</p>
+                            </div>
+                            <div class="">
+                                <button
+                                    class="btn px-4   hidden  font-semibold border-2 border-[#D2FF72] rounded-3xl bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] lg:flex">Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
-       
     </header>
+    <!-- main -->
+    <main>
+        <!-- Wonderful Performance -->
+        <section class="bg-[#12372A] text-white  urbanist h-[700px] ">
+            <div class="container mx-auto my-24">
+                <div>
+                    <div>
+                        <h1 class="text-6xl text-wrap font-bold text-center mb-12 b">
+                            <span class="border-b-8 rounded-2xl border-[#D2FF72]">Wonderful Performance</span>
+                        </h1>
+                        <p class="text-xl  text-wrap font-bold text-center mt-6 ">
+                            Website speed makes a great first
+                            impression.<br> >It makes a big
+                            difference! It impacts user experience, search rankings, and even sales and
+                            conversions.</p>
+                    </div>
+                    <!--  -->
+                    <div class="flex justify-center items-center gap-12">
+                        <div class="stats  mt-24">
+                            <div class="stat bg-[#12372A]  border-2  border-[#D2FF72]">
+                                <h3 class="stat-value text-center text-3xl font-bold text-[#D2FF72]">89%</h3>
+                                <h3 class="stat-desc text-white text-xl font-bold">21% more than last month</h3>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="stats  mt-24">
+                            <div class="stat bg-[#12372A]  border-2  border-[#D2FF72]">
+                                <h3 class="stat-value text-center text-[#D2FF72] text-3xl font-bold">89%</h3>
+                                <h3 class="stat-desc text-white text-xl font-bold">21% more than last month</h3>
+                            </div>
+                        </div>
+                        <div class="stats  mt-24">
+                            <div class="stat bg-[#12372A]  border-2  border-[#D2FF72]">
+                                <h3 class="stat-value text-center text-[#D2FF72] text-3xl font-bold">89%</h3>
+                                <h3 class="stat-desc text-white text-xl font-bold">21% more than last month</h3>
+                            </div>
+                        </div>
+                        <div class="stats  mt-24">
+                            <div class="stat bg-[#12372A]  border-2  border-[#D2FF72]">
+                                <h3 class="stat-value text-center text-[#D2FF72] text-3xl font-bold">89%</h3>
+                                <h3 class="stat-desc text-white text-xl font-bold">21% more than last month</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  -->
+                </div>
+
+                <!--  -->
+
+            </div>
+
+            </div>
+
+        </section>
+        <!--  -->
+
+
+
+
+        <div class="relative mx-auto bg-gray-800 dark:bg-gray-700 rounded-t-[2.5rem] h-[63px] max-w-[133px]"></div>
+        <div
+            class="relative mx-auto border-gray-900 dark:bg-gray-800 dark:border-gray-800 border-[10px] rounded-[2.5rem] h-[213px] w-[208px]">
+            <div class="h-[41px] w-[6px] bg-gray-800 dark:bg-gray-800 absolute -end-[16px] top-[40px] rounded-e-lg">
+            </div>
+            <div class="h-[32px] w-[6px] bg-gray-800 dark:bg-gray-800 absolute -end-[16px] top-[88px] rounded-e-lg">
+            </div>
+            <div class="rounded-[2rem] overflow-hidden h-[193px] w-[188px]">
+                <img src="https://flowbite.s3.amazonaws.com/docs/device-mockups/watch-screen-image.png"
+                    class="dark:hidden h-[193px] w-[188px]" alt="">
+                <img src=""
+                    class="hidden dark:block h-[193px] w-[188px]" alt="">
+            </div>
+        </div>
+        <div class="relative mx-auto bg-gray-800 dark:bg-gray-700 rounded-b-[2.5rem] h-[63px] max-w-[133px]"></div>
+
+
+
+
+    </main>
 
 </body>
 
