6rd coomite forcost of deal

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- main -->
     <main>
         <!-- Wonderful Performance -->
-        <section class="bg-[#12372A] text-white  urbanist h-[700px] ">
+        <section class="bg-[#12372A] text-white  urbanist  ">
             <div class="container mx-auto my-24">
                 <div>
                     <div>
@@ -286,37 +286,147 @@
                     </div>
                     <!--  -->
                 </div>
-
                 <!--  -->
-
+        </section>
+        <!-- Deals & Discounts -->
+        <section class="container mx-auto my-24 marcellus-regular">
+            <div class="mb-12">
+                <p class="text-xl font-[400] flex justify-center mt-12">Dolor sit amet consectetur</p>
+                <h1 class="text-6xl font-[800] flex justify-center urbanist mt-2">Deals & Discounts</h1>
             </div>
+            <!--  -->
+            <div class="">
+                <!--  -->
+                <div class="hero mb-4 border-4 border-white rounded-xl"
+                    style="background-image: url(./img-2/glass.jpg); border-radius:24px; background-position: center; background-repeat: no-repeat;">
 
+                    <div class=" ">
+                        <div
+                            class="w-[48rem] h-[32rem] relative right-72 m-12 flex flex-col justify-center  p-6  rounded-xl bg-[#12372Acc] text-white">
+                            <div class="flex mb-4 items-center gap-4">
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/stopwatch.png" alt=""> 6
+                                    night/7 day</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/people.png" alt="">max :
+                                    10</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/placeholder.png"
+                                        alt="">Malaysia</p>
+                            </div>
+                            <h1 class="mb-5 text-5xl font-bold">Tour To Satorini</h1>
+                            <p class="mb-5">
+                                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                exercitationem
+                                quasi. In deleniti eaque aut repudiandae et a id nisi.
+                            </p>
+                            <h2
+                                class="mb-4 font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">
+                                $1300-$1700</h2>
+                            <button class="btn bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] w-[50%] ">BOOK NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="hero mb-4 border-4 border-white rounded-xl"
+                    style="background-image: url(./img-2/pahar.jpg); border-radius:24px; background-position: center; background-repeat: no-repeat;">
+
+                    <div class=" ">
+                        <div
+                            class="w-[48rem] h-[32rem] relative left-72 m-12 flex flex-col justify-center  p-6  rounded-xl bg-[#12372Acc] text-white">
+                            <div class="flex mb-4 items-center gap-4">
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/stopwatch.png" alt=""> 6
+                                    night/7 day</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/people.png" alt="">max :
+                                    10</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/placeholder.png"
+                                        alt="">Malaysia</p>
+                            </div>
+                            <h1 class="mb-5 text-5xl font-bold">Tour To Satorini</h1>
+                            <p class="mb-5">
+                                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                exercitationem
+                                quasi. In deleniti eaque aut repudiandae et a id nisi.
+                            </p>
+                            <h2
+                                class="mb-4 font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">
+                                $1300-$1700</h2>
+                            <button class="btn bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] w-[50%] ">BOOK NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="hero md-4 border-4 border-white rounded-xl"
+                    style="background-image: url(./img-2/rasta.jpg); border-radius:24px; background-position: center; background-repeat: no-repeat;">
+
+                    <div class=" ">
+                        <div
+                            class="w-[48rem] h-[32rem] relative right-72 m-12 flex flex-col justify-center  p-6  rounded-xl bg-[#12372Acc] text-white">
+                            <div class="flex mb-4 items-center gap-4">
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/stopwatch.png" alt=""> 6
+                                    night/7 day</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/people.png" alt="">max :
+                                    10</p>
+                                <p class="flex items-center gap-2"><img class="w-8" src="./icon/placeholder.png"
+                                        alt="">Malaysia</p>
+                            </div>
+                            <h1 class="mb-5 text-5xl font-bold">Tour To Satorini</h1>
+                            <p class="mb-5">
+                                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                exercitationem
+                                quasi. In deleniti eaque aut repudiandae et a id nisi.
+                            </p>
+                            <h2
+                                class="mb-4 font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-[#D2FF72] to-[#73EC8B]">
+                                $1300-$1700</h2>
+                            <button class="btn bg-gradient-to-r from-[#D2FF72] to-[#73EC8B] w-[50%] ">BOOK NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--  -->
             </div>
 
         </section>
+        <!--  News feed -->
+        <section class="container mx-auto my-24">
+            <div class="flex gap-4">
+                <!-- all news feed -->
+                <section class="border-4 w-2/5 border-pink-500 ">
+                    <h1>all cetagory news feed</h1>
+                    <div>
+                        <ul class="menu bg-base-200 rounded-box">
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">National New</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Braking news</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">International news</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Regular News</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Sports</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Entertainment</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Culture</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Arts</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">All news</a></li>
+                            <li><a class="tooltip tooltip-right" data-tip="Stats">Item 3</a></li>
+                        </ul>
+                    </div>
+                </section>
+
+                <!--  -->
+                <!-- dragon news feed -->
+                <section class="border-4 w-5/6 border-pink-500">
+                    <h1>dragon news feed</h1>
+                </section>
+
+                <!--  -->
+                <!-- social media -->
+                <section class="border-4 w-2/5 border-pink-500">
+                    <h1>social news feed</h1>
+                </section>
+            </div>
+
+            <!--  -->
+
+
+
+
+
+        </section>
         <!--  -->
-
-
-
-
-        <div class="relative mx-auto bg-gray-800 dark:bg-gray-700 rounded-t-[2.5rem] h-[63px] max-w-[133px]"></div>
-        <div
-            class="relative mx-auto border-gray-900 dark:bg-gray-800 dark:border-gray-800 border-[10px] rounded-[2.5rem] h-[213px] w-[208px]">
-            <div class="h-[41px] w-[6px] bg-gray-800 dark:bg-gray-800 absolute -end-[16px] top-[40px] rounded-e-lg">
-            </div>
-            <div class="h-[32px] w-[6px] bg-gray-800 dark:bg-gray-800 absolute -end-[16px] top-[88px] rounded-e-lg">
-            </div>
-            <div class="rounded-[2rem] overflow-hidden h-[193px] w-[188px]">
-                <img src="https://flowbite.s3.amazonaws.com/docs/device-mockups/watch-screen-image.png"
-                    class="dark:hidden h-[193px] w-[188px]" alt="">
-                <img src=""
-                    class="hidden dark:block h-[193px] w-[188px]" alt="">
-            </div>
-        </div>
-        <div class="relative mx-auto bg-gray-800 dark:bg-gray-700 rounded-b-[2.5rem] h-[63px] max-w-[133px]"></div>
-
-
-
 
     </main>
 
